cloudformation/templates/inception.cfn.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Configure the initial networking resources to deploy the Ghost blog host

Parameters:
  VpcCidr:
    Type: String
    Default: 192.168.0.0/16
  PublicSubnetCidr:
    Type: String
    Default: 192.168.0.0/20 # Have 16 subnets for us to go multi tier multi-az if needed.

Resources:
  MyGhostVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidr
      Tags:
        - Key: name
          Value: Ghost Blog VPC

  MyGhostSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MyGhostVPC
      CidrBlock: !Ref PublicSubnetCidr
      Tags:
        - Key: name
          Value: Ghost Blog Subnet

  MyGhostSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SecurityGroup for the Ghost Blog
      GroupName: MyGhostSG
      VpcId: !Ref MyGhostVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - FromPort: '443'
          IpProtocol: tcp
          ToPort: '443'
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: name
          Value: Ghost Blog SG

  MyGhostIGW:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: name
        Value: Ghost Blog InternetGateway

  MyGhostVpcIGWAttachment:
      Type: "AWS::EC2::VPCGatewayAttachment"
      Properties:
        InternetGatewayId: !Ref MyGhostIGW
        VpcId: !Ref MyGhostVPC

  MyGhostRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MyGhostVPC
      Tags:
      - Key: name
        Value: Ghost Blog RouteTable

  MyGhostRouteToIGW:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref MyGhostRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref MyGhostIGW

  MyGhostSubnetToRoutTableAss:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref MyGhostRouteTable
      SubnetId: !Ref MyGhostSubnet

  MyGhostS3Bucket:
    Type: AWS::S3::Bucket
    #DeletionPolicy: Retain
    Properties:
      BucketName: ghost.jayforweb.com

Outputs:
  MyGhostSG:
    Description: Security Group for the ghost host
    Value: !Ref MyGhostSG
    Export:
      Name: PRIMARY-GHOST-SG

  MyGhostSubnet:
    Description: Subnet for the ghost host
    Value: !Ref MyGhostSubnet
    Export:
      Name: PRIMARY-GHOST-SUBNET
